PN-17552: updated tika-core version dependency and changed tika.isBlank from java.isBlank